# pandemic_simulation

./: Cargo.toml  README.md
src/: area.rs  grid_system.rs  main.rs  organism.rs  simulation_app.rs  square.rs  window_box.rs
