[package]
name = "pandemic_simulation"
version = "0.1.0"
authors = ["C. Flores <53229400+chuck-dev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgx = { "version"="0.8.1", features=["renderer"] }
winit = "0.20.0"
chrono = "0.4"
rand = "0.7.3"
